# Audex

./: .gitignore  CMakeLists.txt  README.md
src/: audio.cpp  audio.hpp  main.cpp  whisper.cpp  whisper.hpp
